cluster/packages/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webpromo
  namespace: openarabic
  labels:
    app: webpromo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webpromo
  template:
    metadata:
      labels:
        app: webpromo
    spec:
      containers:
        - name: webpromo
          image: #{WEBPROMO_TAG}#
          resources:
            limits:
              memory: 512Mi
              cpu: 500m
            requests:
              memory: 200Mi
              cpu: 50m
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            periodSeconds: 10
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            capabilities:
              drop:
                - all
              add: ["MKNOD", "CHOWN", "SETGID", "SETUID"]

---
apiVersion: v1
kind: Service
metadata:
  name: webpromo
  namespace: openarabic
  labels:
    app: webpromo
spec:
  type: NodePort
  ports:
    - port: 5000
      protocol: TCP
      targetPort: 5000
  selector:
    app: webpromo
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webpromo
  namespace: openarabic
spec:
  routes:
    - kind: Rule
      match: Host(`openarabic.io`) || Host(`www.openarabic.io`)
      services:
        - kind: Service
          name: webpromo
          namespace: openarabic
          passHostHeader: true
          responseForwarding:
            flushInterval: 1ms
          port: 5000
